--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
   <div id="BotChatGoesHere"></div>
-<script  type="text/JavaScript" src={{asset 'botchat.js'}}></script>
+<script  type="text/JavaScript" src=https://desireleno470.github.io/botchat.js></script>
 <script type="text/JavaScript">
 
 	/*
